tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/uninitialized_use_before_declare_str.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
const x:str = "Hello"

